--- a/project.config
+++ b/project.config
@@ -1,5 +1,6 @@
 [project]
 	description = Fork Of https://github.com/git/git
+	state = read only
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
